...
        switch self {
        case .oneNightTwoDays:
            return "travel_oneNightTwoDays_btn"
        case .twoNightsThreeDays:
            return "travel_twoNightsThreeDays_btn"
        case .threeNightsFourDays:
            return "travel_threeNightsFourDays_btn"
        case .oneWeek:
            return "travel_oneWeek_btn"
        }
    }
}

...
    // MARK: - Select Box
    private let dashedBox: UIView = {
        let view = UIView()
        view.layer.cornerRadius = 12
        view.backgroundColor = UIColor.systemGray6.withAlphaComponent(0.2)
        view.isAccessibilityElement = true
        view.accessibilityIdentifier = "travel_calendar_view"
        return view
    }()
    
    private let dashedLayer: CAShapeLayer = {
        let layer = CAShapeLayer()
        layer.strokeColor = UIColor.systemGray4.cgColor
...
