...
        label.textAlignment = .center
        return label
    }()
    
    private let confirmButton: PrimaryButton = {
        let view = PrimaryButton(title: "확인")
        view.accessibilityIdentifier = "travel_calendar_confirm_btn"
        view.layer.cornerRadius = 12
        return view
    }()
    
    private var selectedStartDate: Date?
    private var selectedEndDate: Date?
...
